--- a/Estilos/styles.css
+++ b/Estilos/styles.css
@@ -307,17 +307,12 @@ footer p {
   }
 
   .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     background-color: #333;
     color: white;
     text-align: center;
     padding: 20px 0;
-    width: 100%;
-  }
-
-  @media screen and (max-width: 600px) {
-    .footer {
-      font-size: 14px;
-      padding: 15px 0;
-    }
   }
 }
